--- a/DataMining-Actions/00-pipeline-and-compose.ipynb
+++ b/DataMining-Actions/00-pipeline-and-compose.ipynb
@@ -11,10 +11,10 @@
      "output_type": "stream",
      "text": [
       "package版本信息：\n",
-      "numpy:       1.22.3\n",
-      "pandas:      1.4.2\n",
-      "matplotlib:  3.5.1\n",
-      "sklearn:     1.0.2\n",
+      "numpy:       1.21.5\n",
+      "pandas:      1.4.3\n",
+      "matplotlib:  3.5.2\n",
+      "sklearn:     1.1.1\n",
       "seaborn:     0.11.2\n"
      ]
     }
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "de91182f-4fe3-422a-89f9-3c46c297b722",
    "metadata": {},
    "outputs": [
@@ -73,7 +73,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/danielzhang/Documents/Python-Projects/DataAnalysis\n"
+      "/Users/daniel/Documents/Python-Projects/Data-Analysis\n"
      ]
     }
    ],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "34cbc817-e32c-49ce-9c19-9d8ec5bc9876",
    "metadata": {
     "collapsed": false,
@@ -98,10 +98,10 @@
     {
      "data": {
       "text/plain": [
-       "'/Users/danielzhang/Documents/Python-Projects/DataAnalysis'"
+       "'/Users/daniel/Documents/Python-Projects/Data-Analysis'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,12 +217,15 @@
     "  + 'passthrough'，不做任何处理\n",
     "  + estimator，使用指定的估计器处理剩余列\n",
     "  \n",
+    "\n",
+    "> 注意，经过转换后的特征顺序，由传入的`transformers`里出现的顺序确定，其中没有指定的列，在`remainder='passthrough'`下，会被添加到最后。\n",
+    "  \n",
     "此外，还有一个`make_column_transformer()`函数，用于快速创建。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "ee6a81e1-f590-4eef-a04a-be0030a7f7d2",
    "metadata": {},
    "outputs": [],
@@ -234,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "67fd5266-d930-44ce-83df-38af06489e4f",
    "metadata": {},
    "outputs": [
@@ -308,7 +311,7 @@
        "4    a     4    10"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,29 +327,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "id": "f76705c1-1973-4134-8101-0718ed8a9e47",
    "metadata": {},
    "outputs": [],
    "source": [
-    "transformers=[('one-hot', OneHotEncoder(), ['col1']), ('min-max', MinMaxScaler(), ['col2'])]\n",
+    "# 注意，输出的特征顺序由这里传入的顺序决定\n",
+    "transformers=[('min-max', MinMaxScaler(), ['col2']), ('one-hot', OneHotEncoder(), ['col1'])]\n",
     "ctf = ColumnTransformer(transformers=transformers, remainder='drop')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "id": "11b89b52-eab0-4c38-af9f-46a22332abb9",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>ColumnTransformer(transformers=[(&#x27;min-max&#x27;, MinMaxScaler(), [&#x27;col2&#x27;]),\n",
+       "                                (&#x27;one-hot&#x27;, OneHotEncoder(), [&#x27;col1&#x27;])])</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" ><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">ColumnTransformer</label><div class=\"sk-toggleable__content\"><pre>ColumnTransformer(transformers=[(&#x27;min-max&#x27;, MinMaxScaler(), [&#x27;col2&#x27;]),\n",
+       "                                (&#x27;one-hot&#x27;, OneHotEncoder(), [&#x27;col1&#x27;])])</pre></div></div></div><div class=\"sk-parallel\"><div class=\"sk-parallel-item\"><div class=\"sk-item\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" ><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">min-max</label><div class=\"sk-toggleable__content\"><pre>[&#x27;col2&#x27;]</pre></div></div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" ><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">MinMaxScaler</label><div class=\"sk-toggleable__content\"><pre>MinMaxScaler()</pre></div></div></div></div></div></div><div class=\"sk-parallel-item\"><div class=\"sk-item\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-4\" type=\"checkbox\" ><label for=\"sk-estimator-id-4\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">one-hot</label><div class=\"sk-toggleable__content\"><pre>[&#x27;col1&#x27;]</pre></div></div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-5\" type=\"checkbox\" ><label for=\"sk-estimator-id-5\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">OneHotEncoder</label><div class=\"sk-toggleable__content\"><pre>OneHotEncoder()</pre></div></div></div></div></div></div></div></div></div></div>"
+      ],
       "text/plain": [
-       "ColumnTransformer(transformers=[('one-hot', OneHotEncoder(), ['col1']),\n",
-       "                                ('min-max', MinMaxScaler(), ['col2'])])"
+       "ColumnTransformer(transformers=[('min-max', MinMaxScaler(), ['col2']),\n",
+       "                                ('one-hot', OneHotEncoder(), ['col1'])])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,17 +366,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "id": "858e98cd-dce0-48d5-bdfe-0ad7af7b50b7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('one-hot', OneHotEncoder(), ['col1']), ('min-max', MinMaxScaler(), ['col2'])]"
+       "[('min-max', MinMaxScaler(), ['col2']), ('one-hot', OneHotEncoder(), ['col1'])]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,21 +387,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "id": "17230486-08d0-4116-99a7-8616822f8c67",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1.  , 0.  , 0.  ],\n",
-       "       [0.  , 1.  , 1.  ],\n",
-       "       [1.  , 0.  , 0.25],\n",
-       "       [0.  , 1.  , 0.5 ],\n",
-       "       [1.  , 0.  , 0.75]])"
+       "array([[0.  , 1.  , 0.  ],\n",
+       "       [1.  , 0.  , 1.  ],\n",
+       "       [0.25, 1.  , 0.  ],\n",
+       "       [0.5 , 0.  , 1.  ],\n",
+       "       [0.75, 1.  , 0.  ]])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,21 +414,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "f1fe64f8-9c6f-4341-9485-53a75f5f0970",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 1.  ,  0.  ,  0.  ,  6.  ],\n",
-       "       [ 0.  ,  1.  ,  1.  ,  7.  ],\n",
-       "       [ 1.  ,  0.  ,  0.25,  8.  ],\n",
-       "       [ 0.  ,  1.  ,  0.5 ,  9.  ],\n",
-       "       [ 1.  ,  0.  ,  0.75, 10.  ]])"
+       "array([[ 0.  ,  1.  ,  0.  ,  6.  ],\n",
+       "       [ 1.  ,  0.  ,  1.  ,  7.  ],\n",
+       "       [ 0.25,  1.  ,  0.  ,  8.  ],\n",
+       "       [ 0.5 ,  0.  ,  1.  ,  9.  ],\n",
+       "       [ 0.75,  1.  ,  0.  , 10.  ]])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +573,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "data-analysis(Python3.8.12)",
+   "display_name": "DataAnalysis(Python3.8.13)",
    "language": "python",
    "name": "data-analysis"
   },
@@ -578,7 +587,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
