--- a/DeepLearning-Actions/01-pytorch-tutorial.ipynb
+++ b/DeepLearning-Actions/01-pytorch-tutorial.ipynb
@@ -4118,20 +4118,27 @@
     "+ [Tutorials -> Introduction to PyTorch --> DATASETS & DATALOADERS](https://pytorch.org/tutorials/beginner/basics/data_tutorial.html)，这个比较简略.\n",
     "+ [Tutorials -> PyTorch Recipes --> LOADING DATA IN PYTORCH](https://pytorch.org/tutorials/recipes/recipes/loading_data_recipe.html)，这个也比较简略.\n",
     "+ [Tutorials -> WRITING CUSTOM DATASETS, DATALOADERS AND TRANSFORMS](https://pytorch.org/tutorials/beginner/data_loading_tutorial.html).\n",
-    "+ [Docs -> TORCH.UTILS.DATA](https://pytorch.org/docs/stable/data.html)\n",
+    "+ [Docs -> TORCH.UTILS.DATA](https://pytorch.org/docs/stable/data.html) —— 这个最全面\n",
     "\n",
     "一般训练的时候，需要对数据进行分batch进行，为了更方便的提供数据，Pytorch提供了 `torch.utils.data` 包用于辅助处理数据。  \n",
-    "这里面主要有两个类：\n",
-    "1. `data.Dataset()`，一个抽象类，提供对数据的封装。\n",
-    "2. `data.DataLoader()`，在 `Dataset`上进行迭代，每次返回一个 batch 的数据，并且可以实现 shuffle 和 多进程读取。\n",
+    "这里面主要有如下3个类：\n",
+    "1. `data.Dataset()`，提供数据封装的抽象类，子类必须要实现 `__getitem__()` 方法和 `__len__()` 方法，被称为 Map-style。\n",
+    "2. `data.IterableDataset()`，另一个提供数据封装的抽象类，子类必须要实现 `__iter__()` 方法，被称为 Iterable-style\n",
+    "3. `data.DataLoader()`，在 `Dataset`上进行迭代，每次返回一个 batch 的数据，并且可以实现 shuffle 和 多进程读取。\n",
     "\n",
     "除了基本的数据处理工具，PyTorch还提供了一些常见领域的pre-loaded datasets，这些数据集都是继承于 `Dataset` 类，有 如下数据集可供使用：\n",
     "+ Image Datasets，位于 `torchvision.datasets` 包中\n",
     "+ Text Datasets，位于 `torchtext.datasets` 包中\n",
-    "+ Audio Datasets，位于 `torchaudio.datasets` 包中\n",
+    "+ Audio Datasets，位于 `torchaudio.datasets` 包中"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dataset 使用\n",
     "\n",
-    "\n",
-    "自定义数据集需要做如下步骤：\n",
+    "以 Map-style 为例，自定义数据集需要做如下步骤：\n",
     "1. 编写一个类，继承`data.DataSet`类\n",
     "2. 实现`__len__()`方法和 `__getitem__()` 方法\n",
     "  \n",
@@ -4140,7 +4147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4149,11 +4156,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class MyDataset(Dataset):\n",
+    "class MyDatasetV1(Dataset):\n",
     "    def __init__(self, num):\n",
     "        self.data = list(range(num))\n",
     "\n",
@@ -4166,17 +4173,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mydata = MyDataset(num=10)\n",
+    "mydata = MyDatasetV1(num=10)\n",
     "dataloader = DataLoader(dataset=mydata, batch_size=2, shuffle=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -4203,7 +4210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -4221,6 +4228,627 @@
    "source": [
     "for data in dataloader:\n",
     "    print(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DataLoader\n",
+    "\n",
+    "`DataLoader(dataset, batch_size=1, shuffle=None, sampler=None, batch_sampler=None, num_workers=0, collate_fn=None, pin_memory=False, drop_last=False, timeout=0, worker_init_fn=None, multiprocessing_context=None, generator=None, *, prefetch_factor=None, persistent_workers=False, pin_memory_device='')`\n",
+    "+ `num_workers`, 加载数据的进程数，默认=0，表示不使用多进程\n",
+    "+ **`collate_fn`，如何将多个样本的数据拼成一个batch**\n",
+    "+ **`sampler`，抽样的类**\n",
+    "+ `pin_memory`，是否将数据保存在pin_memory区域，该区域的数据移动到GPU会稍微快一点\n",
+    "+ `drop_last`，是否丢弃最后一个 batch\n",
+    "\n",
+    "这里主要研究下 `collate_fn` 和 `sampler` 参数的使用。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### collate_fn参数\n",
+    "\n",
+    "默认下，`collate_fn`的参数是 `torch.utils.data.default_collate()` 函数，它接受一个 batch_size 的样本，并**以增加一个维度的方式**将其拼成一个 batch.\n",
+    "\n",
+    "**一般说来，`collate_fn`的函数接受的参数是一个 list，其中的每个元素是 `__getitem__()` 函数的返回值**。\n",
+    "\n",
+    "通常在 `collate_fn` 函数中，自定义的是padding对齐，shape变换等操作。\n",
+    "\n",
+    "下面的例子来自该函数的文档。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.utils.data import default_collate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0, 1, 2, 3])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "default_collate([0, 1, 2, 3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a', 'b', 'c']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "default_collate(['a', 'b', 'c'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'A': tensor([  0, 100]), 'B': tensor([  1, 100])}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "default_collate([{'A': 0, 'B': 1}, {'A': 100, 'B': 100}])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[tensor([0, 2]), tensor([1, 3])]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "default_collate([(0, 1), (2, 3)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[tensor([0, 2]), tensor([1, 3])]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "default_collate([[0, 1], [2, 3]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "下面的例子展示了 `collate_fn` 函数的使用。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.utils.data import Dataset, DataLoader, default_collate\n",
+    "\n",
+    "class MyDatasetV2(Dataset):\n",
+    "    def __init__(self, data):\n",
+    "        self.data = data\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.data)\n",
+    "\n",
+    "    def __getitem__(self, index):\n",
+    "        return self.data[index]\n",
+    "\n",
+    "# 简单打印 接受的数据\n",
+    "def print_collate_fn(batch):\n",
+    "    print(f\"print_collate_fn.batch.__class__: \", type(batch))\n",
+    "    print(f\"print_collate_fn.batch: \", batch)\n",
+    "    # 使用默认的 函数处理\n",
+    "    return default_collate(batch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "print_collate_fn.batch.__class__:  <class 'list'>\n",
+      "print_collate_fn.batch:  [0, 1]\n",
+      "out_data:  tensor([0, 1])\n",
+      "----------------\n",
+      "print_collate_fn.batch.__class__:  <class 'list'>\n",
+      "print_collate_fn.batch:  [2, 3]\n",
+      "out_data:  tensor([2, 3])\n",
+      "----------------\n",
+      "print_collate_fn.batch.__class__:  <class 'list'>\n",
+      "print_collate_fn.batch:  [4]\n",
+      "out_data:  tensor([4])\n",
+      "----------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = list(range(5))\n",
+    "\n",
+    "mydata = MyDatasetV2(data=data)\n",
+    "dataloader = DataLoader(dataset=mydata, batch_size=2, collate_fn=print_collate_fn)\n",
+    "for data in dataloader:\n",
+    "    print(\"out_data: \", data)\n",
+    "    print(\"----------------\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "print_collate_fn.batch.__class__:  <class 'list'>\n",
+      "print_collate_fn.batch:  [('1', 'a'), ('2', 'b')]\n",
+      "out_data:  [('1', '2'), ('a', 'b')]\n",
+      "----------------\n",
+      "print_collate_fn.batch.__class__:  <class 'list'>\n",
+      "print_collate_fn.batch:  [('3', 'c'), ('4', 'd')]\n",
+      "out_data:  [('3', '4'), ('c', 'd')]\n",
+      "----------------\n",
+      "print_collate_fn.batch.__class__:  <class 'list'>\n",
+      "print_collate_fn.batch:  [('5', 'e'), ('6', 'f')]\n",
+      "out_data:  [('5', '6'), ('e', 'f')]\n",
+      "----------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = list(zip('123456', 'abcdef'))\n",
+    "\n",
+    "mydata = MyDatasetV2(data=data)\n",
+    "dataloader = DataLoader(dataset=mydata, batch_size=2, shuffle=False, collate_fn=print_collate_fn)\n",
+    "for data in dataloader:\n",
+    "    print(\"out_data: \", data)\n",
+    "    print(\"----------------\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "print_collate_fn.batch.__class__:  <class 'list'>\n",
+      "print_collate_fn.batch:  [([1, 2], 'x'), ([2, 3], 'x')]\n",
+      "out_data:  [[tensor([1, 2]), tensor([2, 3])], ('x', 'x')]\n",
+      "----------------\n",
+      "print_collate_fn.batch.__class__:  <class 'list'>\n",
+      "print_collate_fn.batch:  [([3, 4], 'y'), ([4, 5], 'z')]\n",
+      "out_data:  [[tensor([3, 4]), tensor([4, 5])], ('y', 'z')]\n",
+      "----------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = [([1, 2], 'x'), ([2, 3], 'x'), ([3, 4], 'y'), ([4, 5], 'z')]\n",
+    "\n",
+    "mydata = MyDatasetV2(data=data)\n",
+    "dataloader = DataLoader(dataset=mydata, batch_size=2, shuffle=False, collate_fn=print_collate_fn)\n",
+    "for data in dataloader:\n",
+    "    print(\"out_data: \", data)\n",
+    "    print(\"----------------\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### sampler参数\n",
+    "\n",
+    "参考博客：[Pytorch Sampler详解](https://zhuanlan.zhihu.com/p/82985227)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from torch.utils.data.sampler import SequentialSampler, RandomSampler, SubsetRandomSampler, WeightedRandomSampler"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "+ `SequentialSampler(data_source)` 就是顺序采样，参数 `data_source` **中的值不重要，重要的是长度**。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = SequentialSampler([2, 5, 3, 4])\n",
+    "for value in s:\n",
+    "    print(value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = SequentialSampler([2, 2, 2, 2])\n",
+    "for value in s:\n",
+    "    print(value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([0, 1])\n",
+      "tensor([2, 3])\n"
+     ]
+    }
+   ],
+   "source": [
+    "mydata = MyDatasetV1(num=10)\n",
+    "dataloader = DataLoader(dataset=mydata, batch_size=2, sampler=SequentialSampler([1, 1, 1, 1]))\n",
+    "for data in dataloader:\n",
+    "    print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([0, 1])\n",
+      "tensor([2, 3])\n",
+      "tensor([4, 5])\n"
+     ]
+    }
+   ],
+   "source": [
+    "mydata = MyDatasetV1(num=10)\n",
+    "dataloader = DataLoader(dataset=mydata, batch_size=2, sampler=SequentialSampler([1, 1, 1, 1, 2, 2]))\n",
+    "for data in dataloader:\n",
+    "    print(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "+ `RandomSampler(data_source, replacement=False, num_samples=None, generator=None)`\n",
+    "  + `data_source`, 内容不重要，重要的是长度\n",
+    "  + `replacement`, 设置是否放回采样\n",
+    "  + `num_samples`, 设置样本数量"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = RandomSampler(data_source=[1, 3, 7, 2, 4, 6, 5], num_samples=5)\n",
+    "for value in s:\n",
+    "    print(value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([4, 1])\n",
+      "tensor([2, 3])\n",
+      "tensor([5])\n"
+     ]
+    }
+   ],
+   "source": [
+    "mydata = MyDatasetV1(num=10)\n",
+    "dataloader = DataLoader(dataset=mydata, batch_size=2, sampler=s)\n",
+    "for data in dataloader:\n",
+    "    print(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "+ `SubsetRandomSampler(indices, generator=None)`，根据给定的indices进行**不放回**采样\n",
+    "\n",
+    "> 这个也可以用于进行训练集/测试集分割，见下面。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([7, 1])\n",
+      "tensor([5, 6])\n",
+      "tensor([3])\n"
+     ]
+    }
+   ],
+   "source": [
+    "mydata = MyDatasetV1(num=10)\n",
+    "dataloader = DataLoader(dataset=mydata, batch_size=2, sampler=SubsetRandomSampler(indices=[1, 3, 5, 7, 6]))\n",
+    "for data in dataloader:\n",
+    "    print(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 数据集分割\n",
+    "\n",
+    "`torch.utils.data` 中还提供了下面两个工具，用于进行数据集分割。\n",
+    "\n",
+    "+ `Subset(dataset, indices)`：其中的`indices` 指定要获取的子数据集索引\n",
+    "\n",
+    "+ `random_split(dataset, lengths, generator=<torch._C.Generator object>)`\n",
+    "  + `lengths` 指定要分割的数量或者比例\n",
+    "  + 返回值就是上面的 `Subset` 实例"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.utils.data import Subset, random_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "mydata = MyDatasetV1(num=10)\n",
+    "mydata_subset = Subset(dataset=mydata, indices=[1, 3, 5, 7])\n",
+    "for v in mydata_subset:\n",
+    "    print(v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d1.__class__ <class 'torch.utils.data.dataset.Subset'>\n",
+      "1\n",
+      "8\n",
+      "2\n",
+      "9\n",
+      "------------\n",
+      "3\n",
+      "4\n",
+      "6\n",
+      "0\n",
+      "5\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "mydata = MyDatasetV1(num=10)\n",
+    "d1, d2 = random_split(mydata, lengths=[4, 6])\n",
+    "print(\"d1.__class__\", type(d1))\n",
+    "for v in d1:\n",
+    "    print(v)\n",
+    "print(\"------------\")\n",
+    "for v in d2:\n",
+    "    print(v)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "+ 还有一种做法是，使用`SubsetRandomSampler` 采样器 **将训练集划分成训练集和验证集**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mydata = MyDatasetV1(num=10)\n",
+    "\n",
+    "n_train = len(mydata)\n",
+    "train_size = int(n_train * 0.7)\n",
+    "indices = list(range(n_train))\n",
+    "# print(indices)\n",
+    "np.random.shuffle(indices)\n",
+    "# print(indices)\n",
+    "\n",
+    "train_sampler = SubsetRandomSampler(indices[:train_size])\n",
+    "test_sampler = SubsetRandomSampler(indices[train_size:])\n",
+    "\n",
+    "train_loader = DataLoader(dataset=mydata, batch_size=2, sampler=train_sampler)\n",
+    "test_loader = DataLoader(dataset=mydata, batch_size=2, sampler=test_sampler)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([6, 8])\n",
+      "tensor([4, 0])\n",
+      "tensor([2, 5])\n",
+      "tensor([9])\n"
+     ]
+    }
+   ],
+   "source": [
+    "for v in train_loader:\n",
+    "    print(v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([7, 3])\n",
+      "tensor([1])\n"
+     ]
+    }
+   ],
+   "source": [
+    "for v in test_loader:\n",
+    "    print(v)"
    ]
   },
   {
